registration overflow fixed

--- a/style.css
+++ b/style.css
@@ -140,6 +140,9 @@ nav ul li a:hover{
         margin: 20px 0;
 
     }
+    #regestration{
+        letter-spacing: 0.9rem;
+    }
 
 }
 
